# E-mess

./: .gitignore  CMakeLists.txt  widget.cpp  widget.h
chats/: chats_common.cpp  chats_common.h  user_message_box.cpp  user_message_box.h
network/: networkconnecion.cpp
notifications/: notification_manager.cpp  notification_manager.h
settings/: settings.cpp  settings.h
settings/tests/: settings_tests.cpp  settings_tests.h
sidebar/: sidebar.cpp  sidebar.h
src/: main.cpp
src/core/network/: networkconnection.cpp  networkconnection.h
src/core/notifications/: notification_manager.cpp
src/core/settings/: settings.cpp  settings.h
src/ui/chats/: user_message_box.cpp  user_message_box.h
src/ui/mainwindow/: widget.cpp  widget.h
src/ui/sidebar/: sidebar.cpp  sidebar.h
src/utils/: logger.cpp  logger.h  own_utils.cpp
tests/: main_tests.cpp
tests/settings/: settings_tests.cpp
tests/settings/json_settings/: user_settings_added_row.json  user_settings_default.json  user_settings_removed_row.json
utils/: logger.cpp  logger.h  own_utils.cpp  own_utils.h
